# NEST-ZkPrework

./: .gitmodules  README.md
anchor/: Anchor.toml  package.json
anchor/programs/anchor/src/: lib.rs  verification_key.rs
anchor/programs/test_zk/: Cargo.toml
anchor/programs/test_zk/src/: lib.rs
anchor/tests/: anchor.ts
circom/ceremonies/phase_2/mul2/: mult2_0000.zkey  mult2_0001.zkey  verification_key.json
circom/ceremonies/powers_of_tau/: pot12_0001.ptau
circom/circuits/: mult2.circom
circom/circuits_out/mult2_cpp/: Makefile  mult2.cpp
circom/circuits_out/mult2_js/: mult2.wasm
circom/proof/: witness_proof.json
